# saarthi-v2

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  PROGRESS.md  app.json  node_modules  package-lock.json  package.json  server.sh  setup-server.sh  tailwind.config.js  tsconfig.json
.claude/agents/: implementer-default.md  implementer-fast.md  maestro-author.md  pm.md  tester-quinn.md
agent-memory/: decisions.md  domain.md  general.md  tools.md
docs/: threads-design.md
docs/follow-ups/: auto-create-threads-settings.md  settings-page-functional.md
features/threads-jun-4/: data-flow.md  threads-design.md
scripts/: bootstrap-worktree.sh  seed-threads.ts  tsconfig.json
server/: .env.example  README.md  cloudflared.yml  llm.py  main.py  pyproject.toml
server/knowledge/: __init__.py  context.py  links.py  sources.py  tools.py
server/knowledge/recipes/: __init__.py  compute.py  foods.json  guide.md  manifest.json  recipes.computed.json  recipes.json  schema.py
skills/accept-feature/: SKILL.md
skills/approve-spec/: SKILL.md
skills/build-ios/: SKILL.md
skills/conversation-debugger/: SKILL.md
skills/feature/: SKILL.md
skills/from-spec/: SKILL.md
skills/is-app-broken/: SKILL.md
skills/iterate/: SKILL.md
skills/pipeline-dashboard/: SKILL.md
skills/revert-feature/: SKILL.md
skills/supabase-query/: SKILL.md
skills/test-app-locally/: SKILL.md
specs/006-threads-a-data-layer/: spec.md
specs/007-threads-b-summary-uis/: spec.md
specs/008-threads-c-chat-and-coach/: spec.md
src/app/: _layout.tsx  index.tsx
src/components/: AppHeader.tsx  (+5 more)
(+69 files in other folders)
