[project]
name = "saarthi-v2-server"
version = "0.1.0"
description = "Saarthi V2 backend — FastAPI shell."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118",
    "uvicorn[standard]>=0.34",
    "python-dotenv>=1.0",
    "supabase>=2.31.0",
    "apscheduler>=3.10",
    "postgrest>=0.16",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.uv]
package = false
